project-assessment-site/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "project-assessment-ingress"
<<<<<<< HEAD
  namespace: project-test
=======
  namespace: project-dev
>>>>>>> dev

spec:
  rules:
    - host:
      http:
        paths:
          - path: /project
            backend:
              serviceName: project-assessment-site
              servicePort: 80
